--- a/index.html
+++ b/index.html
@@ -727,15 +727,15 @@
               <!-- Contact Form (Right side in RTL) -->
               <div class="col-lg-5 order-lg-2" data-aos="fade-up" data-aos-delay="300">
                 <div class="contact-form h-100">
-                  <iframe aria-label='ارسل لنا رسالة' frameborder="0"
+                  <!-- <iframe aria-label='ارسل لنا رسالة' frameborder="0"
                     style="height:500px;width:100%;border:none;border-radius:8px;"
                     src='https://forms.zohopublic.com/rajwatam1/form/ContactUs1/formperma/CU4AdkCpeTKXNt0n7QuoKcSXF0lwTysf8d3LHSHKdGA'>
-                  </iframe>
+                  </iframe> -->
                 </div>
               </div>
               <!-- End Contact Form -->
                <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
-                    <form action="send_mail.php" method="POST" class="contact-form bg-white p-5 rounded-4 shadow-lg border border-light">
+                    <form action="../send_mail.php" method="POST" class="contact-form bg-white p-5 rounded-4 shadow-lg border border-light">
                         <h3 class="mb-4 text-center fw-bold text-primary">Get in Touch</h3>
                         <p class="text-center text-muted mb-4">We’d love to hear from you! Fill out the form below and we’ll get back to you soon.</p>
 
