--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
               </div>
               <!-- End Contact Form -->
                <div class="col-lg-7 wow fadeIn" data-wow-delay="0.3s">
-                    <form action="../send_mail.php" method="POST" class="contact-form bg-white p-5 rounded-4 shadow-lg border border-light">
+                    <form action="send_mail.php" method="POST" class="contact-form bg-white p-5 rounded-4 shadow-lg border border-light">
                         <h3 class="mb-4 text-center fw-bold text-primary">Get in Touch</h3>
                         <p class="text-center text-muted mb-4">We’d love to hear from you! Fill out the form below and we’ll get back to you soon.</p>
 
