--- a/index.html
+++ b/index.html
@@ -708,95 +708,95 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+<section id="contact" class="contact section" dir="rtl">
 
-      <!-- Section Title -->
-      <div class="container" data-aos="fade-up">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-center">
-            <h2 class="section-title mb-4">اتصل بنا</h2>
-          </div>
-        </div>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container" data-aos="fade-up">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center">
+        <h2 class="section-title mb-4">اتصل بنا</h2>
+      </div>
+    </div>
+  </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-            <div class="row g-4 g-lg-5 justify-content-center">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div class="row g-4 g-lg-5 justify-content-center">
 
-              <!-- Contact Form (Right side in RTL) -->
-              <div class="col-lg-5 order-lg-2" data-aos="fade-up" data-aos-delay="300">
-                <div class="contact-form h-100">
-                  <!-- <iframe aria-label='ارسل لنا رسالة' frameborder="0"
-                    style="height:500px;width:100%;border:none;border-radius:8px;"
-                    src='https://forms.zohopublic.com/rajwatam1/form/ContactUs1/formperma/CU4AdkCpeTKXNt0n7QuoKcSXF0lwTysf8d3LHSHKdGA'>
-                  </iframe> -->
+          <!-- Contact Info Box -->
+          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <div class="info-box h-100 p-4 border rounded">
+              <h3 class="mb-4">معلومات الاتصال</h3>
+              <p class="mb-4 text-muted">لا تتردد في الاتصال بنا</p>
+
+              <!-- Location -->
+              <div class="info-item mb-4">
+                <div class="d-flex align-items-start">
+                  <div class="icon-box ms-3">
+                    <i class="bi bi-geo-alt fs-5"></i>
+                  </div>
+                  <div class="content">
+                    <h4 class="mb-2">موقعنا</h4>
+                    <p class="mb-0">
+                      <a href="https://maps.app.goo.gl/qdtsrY26cTxTSJRE8" target="_blank" class="d-flex align-items-center">
+                        <i class="bi bi-geo-alt ms-2"></i>طريق الأمير بندر بن عبدالعزيز، الرياض
+                      </a>
+                    </p>
+                  </div>
                 </div>
               </div>
-              <!-- End Contact Form -->
 
-              <!-- Contact Info Box (Left side in RTL) -->
-              <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-                <div class="info-box h-100 p-4 border rounded">
-                  <h3 class="mb-4">معلومات الاتصال</h3>
-                  <p class="mb-4 text-muted">لا تتردد في الاتصال بنا</p>
-
-                  <!-- Location Info -->
-                  <div class="info-item mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <div class="d-flex align-items-start">
-                      <div class="icon-box ms-3">
-                        <i class="bi bi-geo-alt fs-5"></i>
-                      </div>
-                      <div class="content">
-                        <h4 class="mb-2">موقعنا</h4>
-                        <p class="mb-0">
-                          <a href="https://maps.app.goo.gl/qdtsrY26cTxTSJRE8" target="_blank"
-                            class="d-flex align-items-center">
-                            <i class="bi bi-geo-alt ms-2"></i>طريق الأمير بندر بن عبدالعزيز، الرياض
-                          </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div><!-- End Location Info -->
-
-                  <!-- Phone Info -->
-                  <div class="info-item mb-4" data-aos="fade-up" data-aos-delay="400">
-                    <div class="d-flex align-items-start">
-                      <div class="icon-box ms-3">
-                        <i class="bi bi-telephone fs-5"></i>
-                      </div>
-                      <div class="content">
-                        <h4 class="mb-2">رقم الهاتف</h4>
-                        <p class="mb-0">
-                          <a href="tel:+966505282955">559 282 505 669+</a>
-                        </p>
-                      </div>
-                    </div>
-                  </div><!-- End Phone Info -->
-
-                  <!-- Email Info -->
-                  <div class="info-item mb-4" data-aos="fade-up" data-aos-delay="500">
-                    <div class="d-flex align-items-start">
-                      <div class="icon-box ms-3">
-                        <i class="bi bi-envelope fs-5"></i>
-                      </div>
-                      <div class="content">
-                        <h4 class="mb-2">البريد الإلكتروني</h4>
-                        <p class="mb-0">
-                          <a href="mailto:info@watamglass.com">info@watamglass.com</a>
-                        </p>
-                      </div>
-                    </div>
-                  </div><!-- End Email Info -->
+              <!-- Phone -->
+              <div class="info-item mb-4">
+                <div class="d-flex align-items-start">
+                  <div class="icon-box ms-3">
+                    <i class="bi bi-telephone fs-5"></i>
+                  </div>
+                  <div class="content">
+                    <h4 class="mb-2">رقم الهاتف</h4>
+                    <p class="mb-0">
+                      <a href="tel:+966505282955" dir="ltr">+966 505 282 955</a>
+                    </p>
+                  </div>
                 </div>
-              </div><!-- End Contact Info Box -->
+              </div>
+
+              <!-- Email -->
+              <div class="info-item">
+                <div class="d-flex align-items-start">
+                  <div class="icon-box ms-3">
+                    <i class="bi bi-envelope fs-5"></i>
+                  </div>
+                  <div class="content">
+                    <h4 class="mb-2">البريد الإلكتروني</h4>
+                    <p class="mb-0">
+                      <a href="mailto:info@watamglass.com">info@watamglass.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
 
             </div>
-          </div>
+          </div><!-- End Contact Info -->
+
+          <!-- Contact Form -->
+          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
+            <div class="contact-form h-100">
+              <iframe dir="rtl" aria-label="ارسل لنا رسالة" frameborder="0"
+                style="height:500px;width:100%;border:none;border-radius:8px;"
+                src="https://forms.zohopublic.com/rajwatam1/form/ContactUs1/formperma/CU4AdkCpeTKXNt0n7QuoKcSXF0lwTysf8d3LHSHKdGA">
+              </iframe>
+            </div>
+          </div><!-- End Contact Form -->
+
         </div>
       </div>
+    </div>
+  </div>
 
-    </section><!-- /Contact Section -->
+</section>
+
 
   </main>
 
