--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <html lang="ar" dir="rtl">
 
 <head>
-  <!-- <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"> -->
-  <title>Watam Auto Glass</title>
-  <meta name="description"
-    content="Watam Auto Glass offers professional auto glass repair and replacement services for all types of vehicles. Fast, reliable, and affordable.">
-  <meta name="keywords"
-    content="watam, watam glass, watam auto glass, auto glass repair, windshield replacement, car window repair, auto glass replacement">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
+  <title>وتم لزجاج السيارات | Watam Auto Glass - تغيير وتركيب زجاج السيارات في السعودية</title>
+  <meta name="title" content="وتم لزجاج السيارات | Watam Auto Glass - أفضل محل زجاج سيارات في الرياض، تبوك، جازان، خميس مشيط">
+  <meta name="description" content="وتم لزجاج السيارات - أفضل مركز متخصص في تغيير وتركيب زجاج السيارات الأصلي والتجاري مع الضمان. خدمات زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات في الرياض، تبوك، جازان، خميس مشيط. محل زجاج سيارات قريب منك">
+  <meta name="keywords" content="زجاج سيارات, تغيير زجاج سيارة, تركيب زجاج سيارات, محل زجاج سيارات, ورشة زجاج سيارات, أفضل محل زجاج سيارات, أسعار زجاج السيارات, زجاج سيارات أصلي, زجاج سيارات تجاري, تصليح زجاج سيارات, كسر زجاج السيارة, استبدال زجاج أمامي, تغيير زجاج خلفي, زجاج سيارات مضمون, محل قزاز سيارات, وتم لزجاج السيارات, مركز وتم لزجاج السيارات, Watam Auto Glass, Watam Glass Saudi, رقم وتم لزجاج السيارات, فروع وتم لزجاج السيارات, أسعار وتم لزجاج السيارات, تقييم وتم لزجاج السيارات, زجاج سيارات سيدان, زجاج سيارات دفع رباعي, زجاج باصات, زجاج حافلات, زجاج شاحنات, زجاج معدات ثقيلة, زجاج تريلات, زجاج قلابات, زجاج دينات, زجاج تويوتا, زجاج نيسان, زجاج هيونداي, زجاج كيا, زجاج شفروليه, زجاج فورد, زجاج لاندكروزر, زجاج باترول, زجاج برادو, زجاج جيب, زجاج فورتشنر, زجاج سيارات الرياض, تغيير زجاج سيارات الرياض, محل زجاج سيارات الرياض, زجاج سيارات صناعية العاصمة, زجاج سيارات طريق المدينة المنورة, زجاج سيارات طريق الحائر, زجاج سيارات الصناعية القديمة, زجاج سيارات طريق الخرج, زجاج سيارات صناعية الخليج, زجاج سيارات طريق الأمير بندر, زجاج سيارات تبوك, تغيير زجاج سيارات تبوك, محل زجاج سيارات تبوك, زجاج سيارات العزيزية الجديدة, زجاج سيارات طريق عمر بن الخطاب, زجاج سيارات خميس مشيط, تغيير زجاج سيارات خميس مشيط, محل زجاج سيارات خميس مشيط, زجاج سيارات الرصراص, زجاج سيارات طريق حمزة بن عبدالمطلب, زجاج سيارات جازان, زجاج سيارات صبيا, تغيير زجاج سيارات صبيا, محل زجاج سيارات صبيا, زجاج سيارات طريق الملك فهد, زجاج سيارات أبو عريش, تغيير زجاج سيارات أبو عريش, محل زجاج سيارات أبو عريش, زجاج سيارات طريق الأمير سلطان, زجاج سيارات حي المطار جازان, تغيير زجاج سيارات حي المطار, محل زجاج سيارات طريق الملك عبدالعزيز, أفضل محل تغيير زجاج سيارات في الرياض, أرخص محل زجاج سيارات في جازان, تغيير زجاج أمامي مع ضمان, تركيب زجاج سيارات أصلي مع فاتورة, محل زجاج سيارات قريب مني, تغيير زجاج سيارة بدون موعد, ورشة زجاج سيارات تعمل 24 ساعة, محل زجاج سيارات مع تأمين, الفرق بين الزجاج الأصلي والتجاري, متى يجب تغيير زجاج السيارة, هل كسر الزجاج يؤثر على السلامة, أفضل أنواع زجاج السيارات في السعودية, أسعار تغيير زجاج السيارات">
+  <meta name="author" content="Watam Auto Glass">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="Arabic">
+  <meta name="geo.region" content="SA">
+  <meta name="geo.placename" content="Saudi Arabia">
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="وتم لزجاج السيارات">
-  <meta property="og:description"
-    content="Professional auto glass repair and replacement for all vehicles. Reliable, fast, and affordable service.">
+  <meta property="og:title" content="وتم لزجاج السيارات | Watam Auto Glass - أفضل محل زجاج سيارات">
+  <meta property="og:description" content="مركز وتم لزجاج السيارات - تغيير وتركيب زجاج سيارات أصلي مع الضمان في الرياض، تبوك، جازان، خميس مشيط. زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات">
   <meta property="og:url" content="https://www.watamglass.com/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.watamglass.com/assets/img/favicon.png">
   <meta property="og:site_name" content="Watam Auto Glass">
-
+  <meta property="og:locale" content="ar_SA">
 
   <!-- Favicons -->
   <link rel="icon" href="https://www.watamglass.com/assets/img/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="https://www.watamglass.com/assets/img/favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Vendor CSS Files -->
@@ -40,30 +42,39 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-
-  <link id="bootstrap-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet" />
-  <link id="bootstrap-rtl-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
-    rel="stylesheet" disabled />
+  <link id="bootstrap-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link id="bootstrap-rtl-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet" disabled />
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- Structured Data - Enhanced for SEO -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Watam Auto Glass",
-  "url": "https://www.watamglass.com",
-  "logo": "https://www.watamglass.com/assets/img/favicon.png",
-  "sameAs": [
-    "https://www.facebook.com/watamautoglass",
-    "https://www.instagram.com/watamautoglass"
-  ]
-}
-</script>
-
-
+  {
+    "@context": "https://schema.org",
+    "@type": "AutoRepair",
+    "name": "وتم لزجاج السيارات - Watam Auto Glass",
+    "alternateName": "Watam Glass Saudi",
+    "url": "https://www.watamglass.com",
+    "logo": "https://www.watamglass.com/assets/img/favicon.png",
+    "image": "https://www.watamglass.com/assets/img/favicon.png",
+    "description": "مركز وتم لزجاج السيارات - أفضل محل متخصص في تغيير وتركيب زجاج السيارات الأصلي والتجاري في السعودية",
+    "priceRange": "$$",
+    "areaServed": [
+      {"@type": "City", "name": "الرياض"},
+      {"@type": "City", "name": "تبوك"},
+      {"@type": "City", "name": "جازان"},
+      {"@type": "City", "name": "خميس مشيط"},
+      {"@type": "City", "name": "صبيا"},
+      {"@type": "City", "name": "أبو عريش"}
+    ],
+    "serviceType": ["تغيير زجاج سيارات", "تركيب زجاج سيارات", "تصليح زجاج سيارات", "استبدال زجاج أمامي", "تغيير زجاج خلفي", "زجاج باصات", "زجاج شاحنات"],
+    "sameAs": [
+      "https://www.facebook.com/watamautoglass",
+      "https://www.instagram.com/watamautoglass"
+    ]
+  }
+  </script>
 </head>
 
 <body class="index-page">
