--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- Primary Meta Tags -->
   <title>وتم لزجاج السيارات | Watam Auto Glass - تغيير وتركيب زجاج السيارات في السعودية</title>
-  <meta name="title" content="وتم لزجاج السيارات | Watam Auto Glass - أفضل محل زجاج سيارات في الرياض، تبوك، جازان، خميس مشيط">
-  <meta name="description" content="وتم لزجاج السيارات - أفضل مركز متخصص في تغيير وتركيب زجاج السيارات الأصلي والتجاري مع الضمان. خدمات زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات في الرياض، تبوك، جازان، خميس مشيط. محل زجاج سيارات قريب منك">
-  <meta name="keywords" content="زجاج سيارات, تغيير زجاج سيارة, تركيب زجاج سيارات, محل زجاج سيارات, ورشة زجاج سيارات, أفضل محل زجاج سيارات, أسعار زجاج السيارات, زجاج سيارات أصلي, زجاج سيارات تجاري, تصليح زجاج سيارات, كسر زجاج السيارة, استبدال زجاج أمامي, تغيير زجاج خلفي, زجاج سيارات مضمون, محل قزاز سيارات, وتم لزجاج السيارات, مركز وتم لزجاج السيارات, Watam Auto Glass, Watam Glass Saudi, رقم وتم لزجاج السيارات, فروع وتم لزجاج السيارات, أسعار وتم لزجاج السيارات, تقييم وتم لزجاج السيارات, زجاج سيارات سيدان, زجاج سيارات دفع رباعي, زجاج باصات, زجاج حافلات, زجاج شاحنات, زجاج معدات ثقيلة, زجاج تريلات, زجاج قلابات, زجاج دينات, زجاج تويوتا, زجاج نيسان, زجاج هيونداي, زجاج كيا, زجاج شفروليه, زجاج فورد, زجاج لاندكروزر, زجاج باترول, زجاج برادو, زجاج جيب, زجاج فورتشنر, زجاج سيارات الرياض, تغيير زجاج سيارات الرياض, محل زجاج سيارات الرياض, زجاج سيارات صناعية العاصمة, زجاج سيارات طريق المدينة المنورة, زجاج سيارات طريق الحائر, زجاج سيارات الصناعية القديمة, زجاج سيارات طريق الخرج, زجاج سيارات صناعية الخليج, زجاج سيارات طريق الأمير بندر, زجاج سيارات تبوك, تغيير زجاج سيارات تبوك, محل زجاج سيارات تبوك, زجاج سيارات العزيزية الجديدة, زجاج سيارات طريق عمر بن الخطاب, زجاج سيارات خميس مشيط, تغيير زجاج سيارات خميس مشيط, محل زجاج سيارات خميس مشيط, زجاج سيارات الرصراص, زجاج سيارات طريق حمزة بن عبدالمطلب, زجاج سيارات جازان, زجاج سيارات صبيا, تغيير زجاج سيارات صبيا, محل زجاج سيارات صبيا, زجاج سيارات طريق الملك فهد, زجاج سيارات أبو عريش, تغيير زجاج سيارات أبو عريش, محل زجاج سيارات أبو عريش, زجاج سيارات طريق الأمير سلطان, زجاج سيارات حي المطار جازان, تغيير زجاج سيارات حي المطار, محل زجاج سيارات طريق الملك عبدالعزيز, أفضل محل تغيير زجاج سيارات في الرياض, أرخص محل زجاج سيارات في جازان, تغيير زجاج أمامي مع ضمان, تركيب زجاج سيارات أصلي مع فاتورة, محل زجاج سيارات قريب مني, تغيير زجاج سيارة بدون موعد, ورشة زجاج سيارات تعمل 24 ساعة, محل زجاج سيارات مع تأمين, الفرق بين الزجاج الأصلي والتجاري, متى يجب تغيير زجاج السيارة, هل كسر الزجاج يؤثر على السلامة, أفضل أنواع زجاج السيارات في السعودية, أسعار تغيير زجاج السيارات">
+  <meta name="title"
+    content="وتم لزجاج السيارات | Watam Auto Glass - أفضل محل زجاج سيارات في الرياض، تبوك، جازان، خميس مشيط">
+  <meta name="description"
+    content="وتم لزجاج السيارات - أفضل مركز متخصص في تغيير وتركيب زجاج السيارات الأصلي والتجاري مع الضمان. خدمات زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات في الرياض، تبوك، جازان، خميس مشيط. محل زجاج سيارات قريب منك">
+  <meta name="keywords"
+    content="زجاج سيارات, تغيير زجاج سيارة, تركيب زجاج سيارات, محل زجاج سيارات, ورشة زجاج سيارات, أفضل محل زجاج سيارات, أسعار زجاج السيارات, زجاج سيارات أصلي, زجاج سيارات تجاري, تصليح زجاج سيارات, كسر زجاج السيارة, استبدال زجاج أمامي, تغيير زجاج خلفي, زجاج سيارات مضمون, محل قزاز سيارات, وتم لزجاج السيارات, مركز وتم لزجاج السيارات, Watam Auto Glass, Watam Glass Saudi, رقم وتم لزجاج السيارات, فروع وتم لزجاج السيارات, أسعار وتم لزجاج السيارات, تقييم وتم لزجاج السيارات, زجاج سيارات سيدان, زجاج سيارات دفع رباعي, زجاج باصات, زجاج حافلات, زجاج شاحنات, زجاج معدات ثقيلة, زجاج تريلات, زجاج قلابات, زجاج دينات, زجاج تويوتا, زجاج نيسان, زجاج هيونداي, زجاج كيا, زجاج شفروليه, زجاج فورد, زجاج لاندكروزر, زجاج باترول, زجاج برادو, زجاج جيب, زجاج فورتشنر, زجاج سيارات الرياض, تغيير زجاج سيارات الرياض, محل زجاج سيارات الرياض, زجاج سيارات صناعية العاصمة, زجاج سيارات طريق المدينة المنورة, زجاج سيارات طريق الحائر, زجاج سيارات الصناعية القديمة, زجاج سيارات طريق الخرج, زجاج سيارات صناعية الخليج, زجاج سيارات طريق الأمير بندر, زجاج سيارات تبوك, تغيير زجاج سيارات تبوك, محل زجاج سيارات تبوك, زجاج سيارات العزيزية الجديدة, زجاج سيارات طريق عمر بن الخطاب, زجاج سيارات خميس مشيط, تغيير زجاج سيارات خميس مشيط, محل زجاج سيارات خميس مشيط, زجاج سيارات الرصراص, زجاج سيارات طريق حمزة بن عبدالمطلب, زجاج سيارات جازان, زجاج سيارات صبيا, تغيير زجاج سيارات صبيا, محل زجاج سيارات صبيا, زجاج سيارات طريق الملك فهد, زجاج سيارات أبو عريش, تغيير زجاج سيارات أبو عريش, محل زجاج سيارات أبو عريش, زجاج سيارات طريق الأمير سلطان, زجاج سيارات حي المطار جازان, تغيير زجاج سيارات حي المطار, محل زجاج سيارات طريق الملك عبدالعزيز, أفضل محل تغيير زجاج سيارات في الرياض, أرخص محل زجاج سيارات في جازان, تغيير زجاج أمامي مع ضمان, تركيب زجاج سيارات أصلي مع فاتورة, محل زجاج سيارات قريب مني, تغيير زجاج سيارة بدون موعد, ورشة زجاج سيارات تعمل 24 ساعة, محل زجاج سيارات مع تأمين, الفرق بين الزجاج الأصلي والتجاري, متى يجب تغيير زجاج السيارة, هل كسر الزجاج يؤثر على السلامة, أفضل أنواع زجاج السيارات في السعودية, أسعار تغيير زجاج السيارات">
   <meta name="author" content="Watam Auto Glass">
   <meta name="robots" content="index, follow">
   <meta name="language" content="Arabic">
@@ -18,7 +21,8 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="وتم لزجاج السيارات | Watam Auto Glass - أفضل محل زجاج سيارات">
-  <meta property="og:description" content="مركز وتم لزجاج السيارات - تغيير وتركيب زجاج سيارات أصلي مع الضمان في الرياض، تبوك، جازان، خميس مشيط. زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات">
+  <meta property="og:description"
+    content="مركز وتم لزجاج السيارات - تغيير وتركيب زجاج سيارات أصلي مع الضمان في الرياض، تبوك، جازان، خميس مشيط. زجاج سيارات سيدان، دفع رباعي، باصات، شاحنات">
   <meta property="og:url" content="https://www.watamglass.com/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.watamglass.com/assets/img/favicon.png">
@@ -32,7 +36,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Vendor CSS Files -->
@@ -42,8 +48,10 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-  <link id="bootstrap-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link id="bootstrap-rtl-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet" disabled />
+  <link id="bootstrap-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet" />
+  <link id="bootstrap-rtl-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
+    rel="stylesheet" disabled />
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -719,94 +727,95 @@
 
 
     <!-- Contact Section -->
-<section id="contact" class="contact section" dir="rtl">
+    <section id="contact" class="contact section" dir="rtl">
 
-  <!-- Section Title -->
-  <div class="container" data-aos="fade-up">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-        <h2 class="section-title mb-4">اتصل بنا</h2>
-      </div>
-    </div>
-  </div><!-- End Section Title -->
+      <!-- Section Title -->
+      <div class="container" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="section-title mb-4">اتصل بنا</h2>
+          </div>
+        </div>
+      </div><!-- End Section Title -->
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row justify-content-center">
-      <div class="col-lg-10">
-        <div class="row g-4 g-lg-5 justify-content-center">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <div class="row g-4 g-lg-5 justify-content-center">
 
-          <!-- Contact Info Box -->
-          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <div class="info-box h-100 p-4 border rounded">
-              <h3 class="mb-4">معلومات الاتصال</h3>
-              <p class="mb-4 text-muted">لا تتردد في الاتصال بنا</p>
+              <!-- Contact Info Box -->
+              <div class="col-lg-5" data-aos="fade-up" data-aos-delay="200">
+                <div class="info-box h-100 p-4 border rounded">
+                  <h3 class="mb-4">معلومات الاتصال</h3>
+                  <p class="mb-4 text-muted">لا تتردد في الاتصال بنا</p>
 
-              <!-- Location -->
-              <div class="info-item mb-4">
-                <div class="d-flex align-items-start">
-                  <div class="icon-box ms-3">
-                    <i class="bi bi-geo-alt fs-5"></i>
+                  <!-- Location -->
+                  <div class="info-item mb-4">
+                    <div class="d-flex align-items-start">
+                      <div class="icon-box ms-3">
+                        <i class="bi bi-geo-alt fs-5"></i>
+                      </div>
+                      <div class="content">
+                        <h4 class="mb-2">موقعنا</h4>
+                        <p class="mb-0">
+                          <a href="https://maps.app.goo.gl/qdtsrY26cTxTSJRE8" target="_blank"
+                            class="d-flex align-items-center">
+                            <i class="bi bi-geo-alt ms-2"></i>طريق الأمير بندر بن عبدالعزيز، الرياض
+                          </a>
+                        </p>
+                      </div>
+                    </div>
                   </div>
-                  <div class="content">
-                    <h4 class="mb-2">موقعنا</h4>
-                    <p class="mb-0">
-                      <a href="https://maps.app.goo.gl/qdtsrY26cTxTSJRE8" target="_blank" class="d-flex align-items-center">
-                        <i class="bi bi-geo-alt ms-2"></i>طريق الأمير بندر بن عبدالعزيز، الرياض
-                      </a>
-                    </p>
+
+                  <!-- Phone -->
+                  <div class="info-item mb-4">
+                    <div class="d-flex align-items-start">
+                      <div class="icon-box ms-3">
+                        <i class="bi bi-telephone fs-5"></i>
+                      </div>
+                      <div class="content">
+                        <h4 class="mb-2">رقم الهاتف</h4>
+                        <p class="mb-0">
+                          <a href="tel:+966505282955" dir="ltr">+966 505 282 955</a>
+                        </p>
+                      </div>
+                    </div>
                   </div>
+
+                  <!-- Email -->
+                  <div class="info-item">
+                    <div class="d-flex align-items-start">
+                      <div class="icon-box ms-3">
+                        <i class="bi bi-envelope fs-5"></i>
+                      </div>
+                      <div class="content">
+                        <h4 class="mb-2">البريد الإلكتروني</h4>
+                        <p class="mb-0">
+                          <a href="mailto:info@watamglass.com">info@watamglass.com</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
-              </div>
+              </div><!-- End Contact Info -->
 
-              <!-- Phone -->
-              <div class="info-item mb-4">
-                <div class="d-flex align-items-start">
-                  <div class="icon-box ms-3">
-                    <i class="bi bi-telephone fs-5"></i>
-                  </div>
-                  <div class="content">
-                    <h4 class="mb-2">رقم الهاتف</h4>
-                    <p class="mb-0">
-                      <a href="tel:+966505282955" dir="ltr">+966 505 282 955</a>
-                    </p>
-                  </div>
+              <!-- Contact Form -->
+              <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
+                <div class="contact-form h-100">
+                  <iframe dir="rtl" aria-label="ارسل لنا رسالة" frameborder="0"
+                    style="height:500px;width:100%;border:none;border-radius:8px;"
+                    src="https://forms.zohopublic.com/rajwatam1/form/ContactUs1/formperma/CU4AdkCpeTKXNt0n7QuoKcSXF0lwTysf8d3LHSHKdGA">
+                  </iframe>
                 </div>
-              </div>
-
-              <!-- Email -->
-              <div class="info-item">
-                <div class="d-flex align-items-start">
-                  <div class="icon-box ms-3">
-                    <i class="bi bi-envelope fs-5"></i>
-                  </div>
-                  <div class="content">
-                    <h4 class="mb-2">البريد الإلكتروني</h4>
-                    <p class="mb-0">
-                      <a href="mailto:info@watamglass.com">info@watamglass.com</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
+              </div><!-- End Contact Form -->
 
             </div>
-          </div><!-- End Contact Info -->
-
-          <!-- Contact Form -->
-          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
-            <div class="contact-form h-100">
-              <iframe dir="rtl" aria-label="ارسل لنا رسالة" frameborder="0"
-                style="height:500px;width:100%;border:none;border-radius:8px;"
-                src="https://forms.zohopublic.com/rajwatam1/form/ContactUs1/formperma/CU4AdkCpeTKXNt0n7QuoKcSXF0lwTysf8d3LHSHKdGA">
-              </iframe>
-            </div>
-          </div><!-- End Contact Form -->
-
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
-</section>
+    </section>
 
 
   </main>
