--- a/en/index.html
+++ b/en/index.html
@@ -743,7 +743,7 @@
 
     <!-- Contact Form -->
     <div class="col-lg-7" data-aos="fade-up" data-aos-delay="300">
-      <form action="send_mail.php" method="POST"
+      <form action="/en/send_mail.php" method="POST"
         class="contact-form bg-white p-5 rounded-4 shadow-lg border">
 
         <h3 class="mb-4 text-center fw-bold text-primary">Get in Touch</h3>
