--- a/index.html
+++ b/index.html
@@ -900,9 +900,16 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div class="preloader" id="preloader">
-    <img src="./assets/img/favicon.png" alt="Loading..." class="preloader-img">
+<div class="preloader" id="preloader">
+  <img src="../assets/img/favicon.png" alt="Loading..." class="preloader-img">
+
+  <div class="preloader-progress" aria-label="Loading">
+    <div class="preloader-bar" id="preloaderBar"></div>
   </div>
+
+  <div class="preloader-percent" id="preloaderPercent">0%</div>
+</div>
+
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
