send form data to email

--- a/en/index.html
+++ b/en/index.html
@@ -789,9 +789,8 @@
                       </div>
 
                       <div class="col-md-6">
-                        <input type="tel" name="phone" id="phone" class="form-control"
-                          placeholder="رقم الهاتف (05xxxxxxxx أو +9665xxxxxxxx)" dir="ltr"
-                          pattern="^(05\d{8}|5\d{8}|\+9665\d{8})$"
+                        <input type="tel" name="phone" id="phone" class="form-control" placeholder="Phone Number"
+                          dir="ltr" pattern="^(05\d{8}|5\d{8}|\+9665\d{8})$"
                           title="رقم سعودي صحيح مثل 05xxxxxxxx أو +9665xxxxxxxx" required>
                       </div>
 
